ZNTAMT-9 update package name in comment

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -264,7 +264,7 @@
   <dependencies>
     <!--
     <dependency>
-      <groupId>org.magpie.mt</groupId>
+      <groupId>org.zanata.magpie.mt</groupId>
       <artifactId>mt-frontend</artifactId>
     </dependency>
     -->
