--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
     <hibernate.validator.version>5.3.4.Final</hibernate.validator.version>
     <hibernate.version>5.0.10.Final</hibernate.version>
     <hibernate.commons.version>5.0.1.Final</hibernate.commons.version>
+    <jboss-el-api_3.0_spec.version>1.0.7.Final</jboss-el-api_3.0_spec.version>
+    <javax.el.impl.version>3.0.1-b09</javax.el.impl.version>
     <powermock.version>1.6.6</powermock.version>
     <okapi.version>0.33</okapi.version>
     <infinispan.version>8.1.4.Final</infinispan.version>
@@ -305,6 +307,17 @@
         <version>${deltaspike.version}</version>
         <scope>runtime</scope>
       </dependency>
+      <dependency>
+        <groupId>org.apache.deltaspike.modules</groupId>
+        <artifactId>deltaspike-security-module-api</artifactId>
+        <version>${deltaspike.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.deltaspike.modules</groupId>
+        <artifactId>deltaspike-security-module-impl</artifactId>
+        <version>${deltaspike.version}</version>
+        <scope>runtime</scope>
+      </dependency>
 
       <!-- hibernate -->
       <dependency>
@@ -358,6 +371,19 @@
             <artifactId>validation-api</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.spec.javax.el</groupId>
+        <artifactId>jboss-el-api_3.0_spec</artifactId>
+        <version>${jboss-el-api_3.0_spec.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.el</artifactId>
+        <version>${javax.el.impl.version}</version>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
