--- a/server/pom.xml
+++ b/server/pom.xml
@@ -389,6 +389,14 @@
       <groupId>org.apache.deltaspike.modules</groupId>
       <artifactId>deltaspike-servlet-module-impl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.modules</groupId>
+      <artifactId>deltaspike-security-module-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.modules</groupId>
+      <artifactId>deltaspike-security-module-impl</artifactId>
+    </dependency>
 
     <!-- hibernate -->
     <dependency>
@@ -406,6 +414,16 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
+    <!-- bean validation -->
+    <dependency>
+      <groupId>org.jboss.spec.javax.el</groupId>
+      <artifactId>jboss-el-api_3.0_spec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.el</artifactId>
     </dependency>
 
     <dependency>
