ZNTAMT-14 - refactor to make integration test work

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -243,6 +243,8 @@
                   <testNGArtifactName>none:none</testNGArtifactName>
                   <systemProperties>
                     <http.port>${jboss.http.port}</http.port>
+                    <pg.username>${postgresql.user}</pg.username>
+                    <pg.password>${postgresql.password}</pg.password>
                   </systemProperties>
                 </configuration>
               </execution>
