--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -43,7 +43,8 @@
     "redux-api-middleware": "2.2.0",
     "redux-logger": "3.0.6",
     "style-loader": "0.20.1",
-    "typescript": "2.6.2",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1"
   },
@@ -57,6 +58,7 @@
     "react-router": "4.2.0",
     "redux": "3.7.2",
     "redux-actions": "2.2.1",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "tslib": "^1.9.0"
   }
 }
