--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -44,6 +44,7 @@
     "redux-logger": "3.0.6",
     "style-loader": "0.20.1",
     "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.7.1",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1"
