--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -24,6 +24,11 @@
     <yarn.install.directory>${download.dir}/zanata/node-${node.version}-yarn-${yarn.version}</yarn.install.directory>
     <build.directory>${project.basedir}/src</build.directory>
 
+    <!-- Root path within the jar to put the built artifacts.
+         Note: META-INF/resources/* is served as static content, so this serves
+         the built files at the root of the website -->
+    <bundle.dest>${project.build.outputDirectory}/META-INF/resources</bundle.dest>
+
     <!-- Do not run checkstyle (eslint is used instead for this module) -->
     <checkstyle.skip>true</checkstyle.skip>
   </properties>
@@ -106,14 +111,11 @@
               <outputDirectory>${bundle.dest}</outputDirectory>
               <resources>
                 <resource>
-                  <directory>src/frontend/dist</directory>
-                  <include>intl-polyfill.min.js</include>
-                  <include>frontend.min.js</include>
-                  <include>frontend.css</include>
-                  <include>frontend.css.map</include>
-                  <include>*.js.map</include>
-                  <!-- TODO eliminate generate bootstrap.css, bundle.js, style.css? -->
-                  <!-- TODO try including everything -->
+                  <directory>src/dist</directory>
+                  <include>vendor.js</include>
+                  <include>frontend.bundle.js</include>
+                  <include>styles.css</include>
+                  <!-- TODO include source map-->
                 </resource>
               </resources>
             </configuration>
