--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,21 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- JSF -->
+      <dependency>
+        <groupId>com.sun.faces</groupId>
+        <artifactId>jsf-api</artifactId>
+        <version>2.2.12</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>com.sun.faces</groupId>
+        <artifactId>jsf-impl</artifactId>
+        <version>2.2.12</version>
+        <scope>provided</scope>
+      </dependency>
+
       <!-- logging -->
       <dependency>
         <groupId>org.slf4j</groupId>
