--- a/server/pom.xml
+++ b/server/pom.xml
@@ -376,6 +376,17 @@
       <artifactId>liquibase-slf4j</artifactId>
     </dependency>
 
+    <!-- jsf -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-impl</artifactId>
+    </dependency>
+
     <!-- hibernate -->
     <dependency>
       <groupId>org.hibernate.common</groupId>
