--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -56,16 +56,29 @@
             </configuration>
           </execution>
 
+          <!-- Download all dependency modules from yarn (or mirror). -->
+          <execution>
+            <id>execute yarn install</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>yarn</goal>
+            </goals>
+            <configuration>
+              <workingDirectory>${build.directory}</workingDirectory>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
+
           <!-- Transpile and bundle all the javascript and css -->
           <execution>
-            <id>frontend: execute yarn build</id>
+            <id>execute yarn build</id>
             <phase>compile</phase>
             <goals>
               <goal>yarn</goal>
             </goals>
             <configuration>
               <workingDirectory>${build.directory}</workingDirectory>
-              <arguments>yarn build</arguments>
+              <arguments>build</arguments>
             </configuration>
           </execution>
 
@@ -78,7 +91,7 @@
             </goals>
             <configuration>
               <workingDirectory>${build.directory}</workingDirectory>
-              <arguments>yarn test</arguments>
+              <arguments>test</arguments>
             </configuration>
           </execution>
         </executions>
@@ -112,10 +125,12 @@
               <resources>
                 <resource>
                   <directory>src/dist</directory>
-                  <include>vendor.js</include>
-                  <include>frontend.bundle.js</include>
-                  <include>styles.css</include>
-                  <!-- TODO include source map-->
+                  <include>vendor.*.cache.js</include>
+                  <include>frontend.*.cache.js</include>
+                  <include>frontend.*.cache.css</include>
+                  <include>frontend.*.cache.css.map</include>
+                  <include>*.js.map</include>
+                  <include>manifest.json</include>
                 </resource>
               </resources>
             </configuration>
@@ -141,4 +156,30 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>skipTests</id>
+      <activation>
+        <property>
+          <name>skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <executions>
+              <!-- Skip yarn test -->
+              <execution>
+                <id>execute yarn test</id>
+                <phase>none</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
