--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "js": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "node scripts/check-engines",
+    "js": "yarn run check && webpack",
+    "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "webpack -p --progress --colors"
+    "build": "yarn run check && webpack -p --progress --colors"
   },
   "keywords": [
     "magpie-mt",
@@ -27,6 +28,7 @@
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
     "awesome-typescript-loader": "3.4.1",
+    "check-engines": "^1.5.0",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "3.0.2",
     "html-webpack-plugin": "2.30.1",
@@ -47,16 +49,20 @@
     "tslint-loader": "^3.5.3",
     "typescript": "^2.7.1",
     "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "webpack-dev-server": "2.11.1",
+    "webpack-manifest-plugin": "1.3.2"
   },
   "dependencies": {
     "classnames": "2.2.5",
     "lodash": "4.17.5",
+    "moment": "2.20.1",
+    "moment-timezone": "0.5.14",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "3.7.2",
     "redux-actions": "2.2.1",
     "redux-thunk": "2.2.0",
