--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <postgresql.version>9.4.1212</postgresql.version>
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <enunciate.version>2.8.0</enunciate.version>
+    <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
     <cdi-api.version>1.2</cdi-api.version>
     <site-maven-plugin.version>0.12</site-maven-plugin.version>
     <frontend-maven-plugin.version>1.4</frontend-maven-plugin.version>
@@ -88,6 +89,12 @@
             <artifactId>jsr250-api</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.tuckey</groupId>
+        <artifactId>urlrewritefilter</artifactId>
+        <version>${urlrewritefilter.version}</version>
       </dependency>
 
       <!-- CDI -->
@@ -769,7 +776,7 @@
   </build>
 
   <modules>
-    <!--<module>frontend</module>-->
+    <module>frontend</module>
     <module>server</module>
   </modules>
 </project>
