--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -12,13 +12,14 @@
   </welcome-file-list>
 
   <servlet>
-    <servlet-name>JSF Servlet</servlet-name>
+    <servlet-name>FacesServlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  <!-- ONLY index.xhtml on server, all pages is to handled by js -->
   <servlet-mapping>
-    <servlet-name>JSF Servlet</servlet-name>
-    <url-pattern>*.xhtml</url-pattern>
+    <servlet-name>FacesServlet</servlet-name>
+    <url-pattern>index.xhtml</url-pattern>
   </servlet-mapping>
 
   <!--
@@ -50,6 +51,17 @@
   <listener>
     <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
   </listener>
+
+  <filter>
+    <filter-name>UrlRewriteFilter</filter-name>
+    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UrlRewriteFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
 
   <filter>
     <!-- This name must match the web-fragment.xml in javamelody's jar,
