update login storage

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -13,7 +13,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": false,
     "removeComments": true,
     "skipLibCheck": true,
