--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -7,8 +7,8 @@
     "check": "node scripts/check-engines",
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
-    "start": "webpack-dev-server --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "yarn run check && webpack -p --progress --colors"
+    "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "build": "yarn run check && webpack --mode production --progress --colors "
   },
   "keywords": [
     "magpie-mt",
@@ -18,20 +18,27 @@
   "license": "LGPL-2.1",
   "devDependencies": {
     "@types/classnames": "2.2.3",
+    "@types/crypto-js": "^3.1.38",
     "@types/history": "4.6.2",
+    "@types/lodash": "^4.14.104",
+    "@types/moment": "^2.13.0",
     "@types/node": "8.0.53",
     "@types/react": "16.0.38",
     "@types/react-dom": "16.0.4",
     "@types/react-redux": "5.0.15",
     "@types/react-router": "4.0.18",
-    "@types/redux-actions": "2.2.2",
+    "@types/react-router-dom": "^4.2.4",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.2.4",
+    "@types/redux-logger": "^3.0.5",
+    "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
     "awesome-typescript-loader": "3.4.1",
     "check-engines": "^1.5.0",
     "css-loader": "0.28.9",
-    "extract-text-webpack-plugin": "3.0.2",
-    "html-webpack-plugin": "2.30.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.0.4",
     "less": "3.0.0",
     "less-loader": "4.0.5",
     "postcss": "6.0.17",
@@ -46,18 +53,18 @@
     "redux-logger": "3.0.6",
     "style-loader": "0.20.1",
     "tslint": "^5.9.1",
-    "tslint-loader": "^3.5.3",
+    "tslint-loader": "^3.6.0",
     "typescript": "^2.7.1",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
-    "webpack-manifest-plugin": "1.3.2"
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-manifest-plugin": "^2.0.0-rc.2"
   },
   "dependencies": {
-    "classnames": "2.2.5",
+    "crypto-js": "^3.1.9-1",
     "lodash": "4.17.5",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
-    "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.6",
@@ -65,7 +72,6 @@
     "react-router-dom": "^4.2.2",
     "redux": "3.7.2",
     "redux-actions": "2.2.1",
-    "redux-thunk": "2.2.0",
-    "tslib": "^1.9.0"
+    "redux-thunk": "2.2.0"
   }
 }
