--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -18,13 +18,20 @@
   "license": "LGPL-2.1",
   "devDependencies": {
     "@types/classnames": "2.2.3",
+    "@types/crypto-js": "^3.1.38",
     "@types/history": "4.6.2",
+    "@types/lodash": "^4.14.104",
+    "@types/moment": "^2.13.0",
     "@types/node": "8.0.53",
     "@types/react": "16.0.38",
     "@types/react-dom": "16.0.4",
     "@types/react-redux": "5.0.15",
     "@types/react-router": "4.0.18",
-    "@types/redux-actions": "2.2.2",
+    "@types/react-router-dom": "^4.2.4",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.2.4",
+    "@types/redux-logger": "^3.0.5",
+    "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
     "awesome-typescript-loader": "3.4.1",
@@ -54,6 +61,7 @@
   },
   "dependencies": {
     "classnames": "2.2.5",
+    "crypto-js": "^3.1.9-1",
     "lodash": "4.17.5",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
