--- a/server/pom.xml
+++ b/server/pom.xml
@@ -154,6 +154,7 @@
                     <MT_API_ID>devID</MT_API_ID>
                     <MT_API_KEY>devKEY</MT_API_KEY>
                     <DEFAULT_TRANSLATION_PROVIDER>dev</DEFAULT_TRANSLATION_PROVIDER>
+                    <MT_ORIGIN_WHITELIST>http://localhost:3000</MT_ORIGIN_WHITELIST>
                   </env>
                   <dependsOn>
                     <container>MTDB</container>
@@ -164,7 +165,7 @@
                   </ports>
                   <wait>
                     <http>
-                      <url>http://localhost:${jboss.http.port}/health.html</url>
+                      <url>http://localhost:${jboss.http.port}/app/health</url>
                     </http>
                     <time>60000</time>
                   </wait>
@@ -262,12 +263,17 @@
   </profiles>
 
   <dependencies>
-    <!--
+
     <dependency>
-      <groupId>org.zanata.magpie.mt</groupId>
+      <groupId>org.zanata.magpie</groupId>
       <artifactId>mt-frontend</artifactId>
+      <version>${project.version}</version>
     </dependency>
-    -->
+
+    <dependency>
+      <groupId>org.tuckey</groupId>
+      <artifactId>urlrewritefilter</artifactId>
+    </dependency>
 
     <!-- enunciate -->
     <dependency>
@@ -373,6 +379,17 @@
     <dependency>
       <groupId>com.mattbertolini</groupId>
       <artifactId>liquibase-slf4j</artifactId>
+    </dependency>
+
+    <!-- jsf -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-impl</artifactId>
     </dependency>
 
     <!-- hibernate -->
