--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -8,7 +8,13 @@
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "yarn run check && webpack --mode production --progress --colors "
+    "build": "yarn run check && webpack --mode production --progress --colors ",
+    "postinstall" : "npm --ignore-scripts=false rebuild node-sass"
+  },
+  "engines" : {
+    "node" : ">=8.1.3",
+    "yarn" : ">=1.5.1",
+    "npm" : ">=5.0.3"
   },
   "keywords": [
     "magpie-mt",
@@ -39,8 +45,7 @@
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.0.4",
-    "less": "3.0.0",
-    "less-loader": "4.0.5",
+    "node-sass": "^4.8.1",
     "postcss": "6.0.17",
     "postcss-browser-reporter": "0.5.0",
     "postcss-cssnext": "3.1.0",
@@ -51,6 +56,7 @@
     "react-hot-loader": "3.1.3",
     "redux-api-middleware": "2.2.0",
     "redux-logger": "3.0.6",
+    "sass-loader": "^6.0.7",
     "style-loader": "0.20.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
