--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,6 +26,7 @@
     <kotlin.version>1.1.51</kotlin.version>
     <jboss.http.port>8080</jboss.http.port>
     <jboss.debug.port>8787</jboss.debug.port>
+    <DEFAULT_TRANSLATION_PROVIDER>DEV</DEFAULT_TRANSLATION_PROVIDER>
   </properties>
 
   <build>
@@ -153,7 +154,7 @@
                     <GOOGLE_APPLICATION_CREDENTIALS>/opt/jboss/google/mt-credential.json</GOOGLE_APPLICATION_CREDENTIALS>
                     <MT_API_ID>devID</MT_API_ID>
                     <MT_API_KEY>devKEY</MT_API_KEY>
-                    <DEFAULT_TRANSLATION_PROVIDER>dev</DEFAULT_TRANSLATION_PROVIDER>
+		    <DEFAULT_TRANSLATION_PROVIDER>${DEFAULT_TRANSLATION_PROVIDER}</DEFAULT_TRANSLATION_PROVIDER>
                     <MT_ORIGIN_WHITELIST>http://localhost:3000</MT_ORIGIN_WHITELIST>
                   </env>
                   <dependsOn>
