--- a/openshift/mt-template.yaml
+++ b/openshift/mt-template.yaml
@@ -48,6 +48,8 @@ objects:
       activeDeadlineSeconds: 21600
       resources: {}
       type: Recreate
+      recreateParams:
+        timeoutSeconds: 600
     template:
       metadata:
         labels:
@@ -120,7 +122,7 @@ objects:
             initialDelaySeconds: 60
             periodSeconds: 10
             successThreshold: 1
-            timeoutSeconds: 1
+            timeoutSeconds: 600
           name: ${app}
           ports:
           - containerPort: 8080
@@ -137,11 +139,11 @@ objects:
               path: /app/health
               port: 8080
               scheme: HTTP
-            initialDelaySeconds: 123  
+            initialDelaySeconds: 120  
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            timeoutSeconds: 10
+            timeoutSeconds: 600
 #          resources:
 #            limits:
 #              memory: 2Gi
