--- a/openshift/mt-template.yaml
+++ b/openshift/mt-template.yaml
@@ -21,7 +21,6 @@ objects:
 - apiVersion: v1
   kind: ImageStream
   metadata:
-    generation: 1
     labels:
       app: ${app}
     name: ${app}
@@ -87,7 +86,7 @@ objects:
           - name: JGROUPS_PING_PROTOCOL
             value: openshift.DNS_PING
           - name: OPENSHIFT_DNS_PING_SERVICE_NAME
-            value: ${app}-ping
+            value: ${app}-ping.magpie.svc.local
           - name: OPENSHIFT_DNS_PING_SERVICE_PORT
             value: "8888"
 #          - name: HTTPS_KEYSTORE_DIR
@@ -144,9 +143,11 @@ objects:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 600
-#          resources:
-#            limits:
-#              memory: 2Gi
+          resources:
+            limits:
+              memory: 1Gi
+            requests:
+              memory: 1Gi
 #          volumeMounts:
 #          - mountPath: /etc/eap-secret-volume
 #            name: eap-keystore-volume
