--- a/openshift/mt-template.yaml
+++ b/openshift/mt-template.yaml
@@ -86,7 +86,7 @@ objects:
           - name: JGROUPS_PING_PROTOCOL
             value: openshift.DNS_PING
           - name: OPENSHIFT_DNS_PING_SERVICE_NAME
-            value: ${app}-ping.magpie.svc.local
+            value: ${app}-ping.magpie.svc.cluster.local
           - name: OPENSHIFT_DNS_PING_SERVICE_PORT
             value: "8888"
 #          - name: HTTPS_KEYSTORE_DIR
