--- a/server/pom.xml
+++ b/server/pom.xml
@@ -166,7 +166,7 @@
                     <http>
                       <url>http://localhost:${jboss.http.port}/app/health</url>
                     </http>
-                    <time>60000</time>
+                    <time>90000</time>
                   </wait>
                   <log>
                     <date>default</date>
@@ -464,6 +464,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- for cluster api-->
+    <dependency>
+      <groupId>org.wildfly</groupId>
+      <artifactId>wildfly-clustering-api</artifactId>
+      <version>10.0.0.Final</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.postgresql</groupId>
