--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -8,13 +8,12 @@
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "yarn run check && webpack --mode production --progress --colors ",
-    "postinstall" : "npm --ignore-scripts=false rebuild node-sass"
+    "build": "yarn run check && webpack --mode production --progress --colors "
   },
-  "engines" : {
-    "node" : ">=8.1.3",
-    "yarn" : ">=1.5.1",
-    "npm" : ">=5.0.3"
+  "engines": {
+    "node": ">=8.1.3",
+    "yarn": ">=1.5.1",
+    "npm": ">=5.0.3"
   },
   "keywords": [
     "magpie-mt",
@@ -40,12 +39,14 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
-    "awesome-typescript-loader": "3.4.1",
+    "antd": "^3.4.0",
+    "awesome-typescript-loader": "^4.0.1",
     "check-engines": "^1.5.0",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.0.4",
-    "node-sass": "^4.8.1",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "postcss": "6.0.17",
     "postcss-browser-reporter": "0.5.0",
     "postcss-cssnext": "3.1.0",
@@ -56,11 +57,10 @@
     "react-hot-loader": "3.1.3",
     "redux-api-middleware": "2.2.0",
     "redux-logger": "3.0.6",
-    "sass-loader": "^6.0.7",
     "style-loader": "0.20.1",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
-    "typescript": "^2.7.1",
+    "typescript": "^2.8.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0",
