--- a/pom.xml
+++ b/pom.xml
@@ -706,6 +706,25 @@
           <version>2.4</version>
         </plugin>
         <plugin>
+          <groupId>com.lukegb.mojo</groupId>
+          <artifactId>gitdescribe-maven-plugin</artifactId>
+          <version>2.0</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>gitdescribe</goal>
+              </goals>
+              <id>git-describe</id>
+              <phase>initialize</phase>
+              <configuration>
+                <descriptionProperty>gitDescribe</descriptionProperty>
+                <extraArguments>
+                </extraArguments>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>${maven-war-plugin.version}</version>
