--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,17 @@
           <outputDirectory>${project.build.directory}/deployments</outputDirectory>
           <warName>ROOT</warName>
           <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
+          <archive>
+            <manifest>
+              <addClasspath>false</addClasspath>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+            </manifest>
+            <manifestEntries>
+              <Implementation-Build>${maven.build.timestamp}</Implementation-Build>
+              <SCM-Describe>${gitDescribe}</SCM-Describe>
+            </manifestEntries>
+          </archive>
         </configuration>
       </plugin>
 
