--- a/openshift/mt-template.yaml
+++ b/openshift/mt-template.yaml
@@ -163,16 +163,15 @@ objects:
 #            secretName: eap7-app-secret
     test: false
     triggers:
-#    we commented out below section to avoid double triggering from Jenkins
-#    - imageChangeParams:
-#        automatic: true
-#        containerNames:
-#        - ${app}
-#        from:
-#          kind: ImageStreamTag
-#          name: ${app}:latest
-#          namespace: ${project}
-#      type: ImageChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+        - ${app}
+        from:
+          kind: ImageStreamTag
+          name: ${app}:latest
+          namespace: ${project}
+      type: ImageChange
     - type: ConfigChange
 - apiVersion: v1
   kind: DeploymentConfig
