--- a/server/pom.xml
+++ b/server/pom.xml
@@ -288,6 +288,11 @@
       <artifactId>mt-frontend</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.zanata.magpie</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.tuckey</groupId>
@@ -295,6 +300,7 @@
     </dependency>
 
     <!-- enunciate -->
+    <!-- TODO delete -->
     <dependency>
       <groupId>com.webcohesion.enunciate</groupId>
       <artifactId>enunciate-core-annotations</artifactId>
