--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,9 @@
     <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
     <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+
+    <coverage.complexity.min>0.70</coverage.complexity.min>
+    <coverage.line.min>0.85</coverage.line.min>
   </properties>
 
   <dependencyManagement>
@@ -606,12 +609,12 @@
                       <limit>
                         <counter>COMPLEXITY</counter>
                         <value>COVEREDRATIO</value>
-                        <minimum>0.70</minimum>
+                        <minimum>${coverage.complexity.min}</minimum>
                       </limit>
                       <limit>
                         <counter>LINE</counter>
                         <value>COVEREDRATIO</value>
-                        <minimum>0.85</minimum>
+                        <minimum>${coverage.line.min}</minimum>
                       </limit>
                     </limits>
                   </rule>
@@ -627,7 +630,7 @@
           <executions>
             <execution>
               <goals>
-                <goal>assemble</goal>
+                <goal>docs</goal>
               </goals>
             </execution>
           </executions>
