--- a/common/pom.xml
+++ b/common/pom.xml
@@ -42,6 +42,10 @@
       <groupId>com.webcohesion.enunciate</groupId>
       <artifactId>enunciate-core-annotations</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jaxrs</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
