move persistenc.xml and liquibase to mt-data

--- a/mt-data/pom.xml
+++ b/mt-data/pom.xml
@@ -84,6 +84,18 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+    </plugins>
 
   </build>
 </project>
