move DAO tests to mt-data

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -515,6 +515,13 @@
 
     <!-- Test -->
     <dependency>
+      <groupId>org.zanata.magpie</groupId>
+      <artifactId>mt-data</artifactId>
+      <version>${project.version}</version>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
