--- a/common/pom.xml
+++ b/common/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+    </dependency>
     <!-- enunciate -->
     <dependency>
       <groupId>com.webcohesion.enunciate</groupId>
